<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@mipmap/ic_map"
        android:title="@string/title_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@mipmap/ic_schedule"
        android:title="@string/title_schedule"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@mipmap/ic_camera"
        android:title="@string/title_camera"
        app:showAsAction="always" />

</menu>
